SFDCProject/src/objects/Task__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Blocked_End_Date__c</fullName>
        <label>Blocked End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Blocked_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked Project?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <label>Blocked Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Add Values</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blocked_Start_Date__c</fullName>
        <label>Blocked Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Blocked_Status__c</fullName>
        <label>Blocked Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Full_Name__c</fullName>
        <formula>Phase__r.Project__r.Proposal__r.Homeowner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field10__c</fullName>
        <label>Display Field10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field11__c</fullName>
        <label>Display Field11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Field12__c</fullName>
        <label>Display Field12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Object10__c</fullName>
        <label>Display Object10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Object11__c</fullName>
        <label>Display Object11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Object12__c</fullName>
        <label>Display Object12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date2__c</fullName>
        <label>Expected Close Date2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Name10__c</fullName>
        <label>Field Name10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name11__c</fullName>
        <label>Field Name11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name12__c</fullName>
        <label>Field Name12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting/Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner/Brea PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Payment Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Change Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Team</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Dependent_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dependent Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Branch__c</fullName>
        <formula>Phase__r.Project__r.Opportunity__r.Install_Branch_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <formula>Phase__r.Project__r.Install_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name10__c</fullName>
        <label>Object Name10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name11__c</fullName>
        <label>Object Name11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name12__c</fullName>
        <label>Object Name12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnHoldEndDate__c</fullName>
        <label>On Hold End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Hold_End_Date__c</fullName>
        <label>On Hold End Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold_Start_Date__c</fullName>
        <label>On Hold Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this task ever in &quot;On Hold&quot; status?</description>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Phase__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Phase__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project_Name__r.Job_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Open_Date__c</fullName>
        <formula>Phase__r.Project__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>TEXT(Project_Name__r.Status__c)</formula>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Group_Name__c</controllingField>
            <picklistValues>
                <fullName>Construction Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer-Facing Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrepancy with Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Design Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jurisdiction Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Documents for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing for NTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offsetting Electricity Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Disqualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Permit</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopen_Reason__c</fullName>
        <label>Re-open Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_SLA_Status__c</fullName>
        <formula>IF(SLA_Status__c = &quot;Green&quot;, &quot;1-Green&quot;, IF(SLA_Status__c = &quot;Yellow&quot;, &quot;2-Yellow&quot;, 
IF(SLA_Status__c = &quot;Red&quot;, &quot;3-Red&quot;, &quot;0-Blue&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_In_Hours__c</fullName>
        <label>SLA (In Hours)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Red__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Red</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <formula>IF( AND(NOT(ISNULL( Expected_Close_Date__c)), (SLA_In_Hours__c &gt; 0)), 
       IF(AND(not(ISNULL( End_Date__c)), ((End_Date__c - Expected_Close_Date__c)*24*60 &lt;= 0 ) ), (if( AND(((End_Date__c - Expected_Close_Date2__c)*24*60 &lt;= 0 ) ) , &apos;Green&apos; , &apos;Yellow&apos;)), 
          IF(AND((( NOW()  - Expected_Close_Date__c)*24*60 &lt;= 0 ) ), (if(AND(( NOW()  - Expected_Close_Date2__c)*24*60 &lt;= 0 ) , &apos;Green&apos; , &apos;Yellow&apos;)), &apos;Red&apos;)) 
      , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Partner__c</fullName>
        <formula>Phase__r.Project__r.Sales_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Division__c</fullName>
        <formula>Phase__r.Project__r.Opportunity__r.Sales_Rep_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <formula>Project_Name__r.Service_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Since_Last_Open__c</fullName>
        <description>When the Task status changes from any other status to Open, this field captures the date/time value.</description>
        <label>Start Date Since Last Open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Phase__r.Project__r.Proposal__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Reason__c</fullName>
        <label>Sub-Reason</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>AHJ:  Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHJ Comments/Redlines: Existing Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHJ Comments/Redlines: New Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attached Home Approval Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breaker size discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation request: Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation request: written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change order: customer rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: electrical panel relocation required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: existing permitting issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: minimum system size not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: non-qualifying panel upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: poor roof condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: structural issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: unpermitted structures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructability: unsupported roof surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/ Utility Address Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County/ Title Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit memo or rebate outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer facing change order required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Nonresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer rejected change order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer requested cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Signature Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrepancy within Planset</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Age__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Open&quot;), (Today() - DATEVALUE(Start_Date__c) +1 ), 
IF(ISPICKVAL( Status__c , &quot;Complete&quot;), ( DATEVALUE(End_Date__c ) - DATEVALUE(Start_Date__c )) +1, 
IF(ISPICKVAL( Project_Name__r.Status__c , &quot;Cancelled&quot;), ( Project_Name__r.End_Date__c - DATEVALUE( Start_Date__c )) +1, 
(Today() - DATEVALUE(Start_Date__c) +1 ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Task_Notes__c</fullName>
        <label>Task Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Start_Date__c</fullName>
        <formula>TEXT( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Time_Since_Last_Open__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Open&quot;), (Today() - DATEVALUE(Start_Date_Since_Last_Open__c) +1 ), 
IF(ISPICKVAL( Status__c , &quot;Complete&quot;), ( DATEVALUE(End_Date__c ) - DATEVALUE(Start_Date_Since_Last_Open__c)) +1, 
IF(ISPICKVAL( Project_Name__r.Status__c , &quot;Cancelled&quot;), ( Project_Name__r.End_Date__c - DATEVALUE( Start_Date_Since_Last_Open__c )) +1, IF(ISPICKVAL( Status__c , &quot;Blocked&quot;), ( DATEVALUE(Blocked_End_Date__c) - DATEVALUE(Start_Date_Since_Last_Open__c)) +1, IF(ISPICKVAL( Status__c , &quot;On-Hold&quot;), ( OnHoldEndDate__c - DATEVALUE(Start_Date_Since_Last_Open__c)) +1,
(Today() - DATEVALUE(Start_Date_Since_Last_Open__c) +1 ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Time Since Last Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Since_Last_Open_Hours__c</fullName>
        <formula>IF( NOT(ISNULL( Start_Date_Since_Last_Open__c)), 
IF( ISPICKVAL( Status__c , &quot;Open&quot;), (NOW() - Start_Date_Since_Last_Open__c)*24, 
NULL),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Open (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Delay_Until__c</fullName>
        <description>created for BSKY-6175 11/4/2014</description>
        <label>Delay Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <formula>TEXT(Project_Name__r.Opportunity__r.Utility_Company__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wait_End_Date__c</fullName>
        <label>Wait_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wait_Reason__c</fullName>
        <label>Wait_Reason</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wait_Start_Date__c</fullName>
        <label>Wait_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>req10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>req10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>req11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>req11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>req12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>req12</label>
        <type>Checkbox</type>
    </fields>
    <label>Workflow Task</label>
    <listViews>
        <fullName>Costco_SPO_Tasks_All_Branches</fullName>
        <columns>NAME</columns>
        <columns>Install_Branch__c</columns>
        <columns>Customer_Full_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Task_Age__c</columns>
        <columns>Task_Time_Since_Last_Open__c</columns>
        <columns>SLA_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Secure Costco Greensky</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Required</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On-Hold,Open</value>
        </filters>
        <label>Costco Greensky Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Costco_SPO_Tasks_for_RFSs_All_Branches</fullName>
        <columns>NAME</columns>
        <columns>Install_Branch__c</columns>
        <columns>Customer_Full_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Task_Age__c</columns>
        <columns>Task_Time_Since_Last_Open__c</columns>
        <columns>SLA_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Costco</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Required</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On-Hold,Open</value>
        </filters>
        <filters>
            <field>Task_Number__c</field>
            <operation>equals</operation>
            <value>Costco.1,Costco.2,Costco.3,Costco.4,Costco.5,Costco.7,Costco.8</value>
        </filters>
        <label>Costco SPO Tasks - All Branches</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IC_Apply_for_Interconnection</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 6 AND 7) OR (1 AND 2 AND 3 AND 5 AND 6 AND 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Utility__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Task_Age__c</columns>
        <columns>SLA_Status__c</columns>
        <columns>Task_Owner__c</columns>
        <columns>Reopen__c</columns>
        <columns>Reopen_Reason__c</columns>
        <columns>Task_Time_Since_Last_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Name__c</field>
            <operation>equals</operation>
            <value>Interconnection</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Apply for interconnection</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Task_Owner__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reopen__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Utility__c</field>
            <operation>notContain</operation>
            <value>NV energy</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notContain</operation>
            <value>cancel</value>
        </filters>
        <label>IC - Apply for Interconnection</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IC_Submit_Final_Interconnection</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 6 AND 7) OR (1 AND 2 AND 3 AND 5 AND 6 AND 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>Utility__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Task_Age__c</columns>
        <columns>SLA_Status__c</columns>
        <columns>Reopen__c</columns>
        <columns>Reopen_Reason__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Task_Time_Since_Last_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Name__c</field>
            <operation>equals</operation>
            <value>Interconnection,Rebates</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>submit final interconnection</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Task_Owner__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reopen__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Utility__c</field>
            <operation>notContain</operation>
            <value>NV energy</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notContain</operation>
            <value>cancel</value>
        </filters>
        <label>IC - Submit Final Interconnection</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>